# jdis-games-2025

./: .gitignore  README.md  config.example.json  docker-compose.yaml
backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
backend/src/: config.rs  console.rs  main.rs  save.rs
backend/src/game/: items.rs  map.rs  mod.rs
backend/src/game/entities/: mod.rs  objects.rs  projectile.rs
backend/src/game/entities/player/: action.rs  inventory.rs  mod.rs
backend/src/server/: client.rs  message.rs  mod.rs  state.rs
backend/src/types/: direction.rs  event.rs  firewall_pattern.rs  mod.rs  player_id.rs  position.rs  scoreboard.rs
docker-volumes/caddy/: Caddyfile
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  biome.jsonc  components.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: router.tsx  styles.css
frontend/src/components/: BlueScreen.tsx  ErrorPage.tsx  FloatingWindow.tsx  GameMap.tsx  NavBar.tsx  NotFoundPage.tsx  PlayerMap.tsx  WebSocketProvider.tsx  WindowProvider.tsx
frontend/src/components/canvas/: drawingUtils.ts
frontend/src/components/ui/: BroadcastHistory.tsx  BroadcastMessage.tsx  UnreadNotifier.tsx  button.tsx  input.tsx  label.tsx  popover.tsx
frontend/src/components/windows/: ChangeTeamName.tsx  Connection.tsx  Documentation.tsx  KillFeed.tsx  Leaderboard.tsx  MapWindow.tsx  PlayerList.tsx  UserMap.tsx
frontend/src/lib/: teamColors.ts  types.ts  useLocalStorage.tsx
frontend/src/routes/: __root.tsx  index.tsx
scripts/: generate-save.py  gengraphs.py  namechanges.py  sort.py
