[package]
name = "jdis-games-2025-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = { version = "0.3.31", features = ["sink"] }
log = "0.4.27"
nanoid = "0.4.0"
noise = "0.8"
rand = "0.8"
rustyline-async = "0.4.6"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
simplelog = "0.12.2"
tokio = { version = "1.45.1", features = ["full"] }
tokio-websockets = { version = "0.11.4", features = ["server", "sha1_smol"] }
